--- a/styles/blocks/_videoswiper.scss
+++ b/styles/blocks/_videoswiper.scss
@@ -5,22 +5,25 @@
     gap: var(--item-spacing-s, 16px);
     background-color: #121212;
     flex-direction: column;
-    width: 184px;
+    width: 100%;
     display: flex;
 
 
 }
 
 .video-card__thumb {
-    width: 184px;
+    max-width: 184px;
     height: 223px;
     position: relative;
 }
 
 .video-card__image {
     object-fit: cover;
-    width: 184px;
+    width: 100%;
     height: 223px;
+    display: block;
+
+
 }
 
 .video-card__play {
@@ -44,39 +47,36 @@
     font-style: normal;
     font-weight: 600;
     line-height: 135%;
-    width: 187px;
+    width: 100%;
     line-height: 135%;
+    max-width: 187px;
     /* 16.2px */
 }
 
 
 
 .video .body-video .swiper {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    width: 100%;
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    padding: 0;
+    z-index: 0;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
 
-.video .body-video .video-slide {
-    align-items: flex-start;
-    gap: var(--item-spacing-s, 16px);
-    background-color: #121212;
-    flex-direction: column;
-    width: 184px;
-    display: flex;
-}
+
+
 
 .video .body-video .swiper-slide {
     flex-direction: column;
     align-items: flex-start;
     display: flex;
-    width: auto !important;
+
 }
 
 .btn-vid {
