--- a/styles/match.scss
+++ b/styles/match.scss
@@ -4,6 +4,7 @@
 @use "./blocks/body";
 @use "./blocks/bodymidle";
 @use "./blocks/videoswiper";
+@use "./blocks/MoreMenu";
 
 .wallpaper {
     width: 100%;
