--- a/styles/blocks/_bodymidle.scss
+++ b/styles/blocks/_bodymidle.scss
@@ -270,9 +270,7 @@
         }
 
         .body-video {
-            display: flex;
-            align-items: flex-start;
-            gap: 14px;
+            display: block;
             width: 100%;
         }
     }
