--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -27,7 +27,7 @@
         .header-left {
             width: 153px;
             height: 40.519px;
-            aspect-ratio: 153.00/40.52;
+
 
         }
 
@@ -130,5 +130,46 @@
                 }
             }
         }
+    }
+}
+
+@media (max-width: 1025px) {
+    .header-container .navbar-header {
+        .header-left {
+            width: 140px;
+            height: 37px;
+        }
+    }
+
+    .title-login {
+        display: none;
+    }
+
+    .header-container .navbar-header .header-center .link:nth-child(1) {
+        display: none;
+    }
+}
+
+@media (max-width: 960px) {
+    .header-container .navbar-header .header-center .link:nth-child(2) {
+        display: none;
+    }
+}
+
+@media (max-width: 900px) {
+    .header-container .navbar-header .header-center .link:nth-child(3) {
+        display: none;
+    }
+}
+
+@media (max-width: 840px) {
+    .header-container .navbar-header .header-center .link:nth-child(4) {
+        display: none;
+    }
+}
+
+@media (max-width: 780px) {
+    .header-container .navbar-header .header-center .link:nth-child(5) {
+        display: none;
     }
 }
