--- a/styles/blocks/_searching.scss
+++ b/styles/blocks/_searching.scss
@@ -15,7 +15,6 @@
         align-items: center;
         gap: 14px;
         flex: 1 0 0;
-        width: 100vw;
 
         .icon-card {
             width: 16px;
@@ -48,6 +47,12 @@
         gap: 10px;
         border-radius: 24px;
         background: rgba(255, 255, 255, 0.15);
+        min-width: 250px;
+        /* Use min-width for flexibility */
+
+        @media (max-width: 1025px) {
+            min-width: 150px;
+        }
 
         .icon-searching {
             stroke-width: 1px;
@@ -61,6 +66,9 @@
             font-style: normal;
             font-weight: 400;
             line-height: normal;
+            width: 100%;
+            background: transparent;
+            border: none;
         }
     }
 }
