--- a/styles/blocks/_videoswiper.scss
+++ b/styles/blocks/_videoswiper.scss
@@ -1,14 +1,10 @@
 .video-slide {
-
-
     align-items: flex-start;
     gap: var(--item-spacing-s, 14px);
     background-color: #121212;
     flex-direction: column;
     width: 184px;
     display: flex;
-
-
 }
 
 .video-card__thumb {
@@ -20,7 +16,7 @@
 .video-card__image {
     object-fit: cover;
     width: 100%;
-    height: 223px;
+    height: auto;
     display: block;
 
 
@@ -55,22 +51,7 @@
 
 
 
-.video .body-video .swiper {
-    transform: translateZ(0);
-    backface-visibility: hidden;
-    perspective: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    overflow: hidden;
-    list-style: none;
-    padding: 0;
-    z-index: 0;
-    width: 100%;
-    /* Add explicit width */
-    min-width: 0;
-    flex: 1;
-}
+
 
 
 
@@ -78,12 +59,11 @@
 
 .video .body-video .swiper-slide {
     flex-direction: column;
-    align-items: flex-start;
+
     display: flex;
     width: 184px !important;
-    /* Force width */
+
     flex-shrink: 0;
-    /* Prevent shrinking */
     gap: var(--item-spacing-s, 14px);
     background-color: #121212;
 
